Change default name

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                 { name: "Kecapi", image: "https://i.imgur.com/0FqJE4G.png", altNames: ["kacapi", "kecapi sunda"] },
                 { name: "Rebana", image: "https://i.imgur.com/31D9REC.png", altNames: ["terbang", "genjring"] },
                 { name: "Hasapi", image: "https://i.imgur.com/T4r6typ.png", altNames: ["kacapi batak", "hasapi batak", "hapetan"] },
-                { name: "Kesokkesok", image: "https://i.imgur.com/scMP0mn.png", altNames: ["keso-keso", "kesok-kesok", "sinrili", "keso", "kesokeso"] },
+                { name: "Kesokeso", image: "https://i.imgur.com/scMP0mn.png", altNames: ["keso-keso", "kesok-kesok", "sinrili", "keso", "kesokkesok"] },
                 { name: "Dol", image: "https://i.imgur.com/TFPMOog.png", altNames: ["keso-keso", "bedug"] },
                 { name: "Fu", image: "https://i.imgur.com/oZEzpNJ.png", altNames: ["fuu", "tahuri", "korno"] },
                 { name: "Gambus", image: "https://i.imgur.com/yfaFz60.png", altNames: ["Gambusu", "Dambus", "Gambus Selodang"] },
@@ -832,3 +832,4 @@
     </body>
 
 </html>
+
