--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                 }, 
                 { 
                     name: "Siter", 
-                    image: "https://cdn1-production-images-kly.akamaized.net/43CfvKHdK4qIm2C6xlV4uIKYs6w=/500x281/smart/filters:quality(75):strip_icc()/kly-media-production/medias/2876070/original/048349600_1565229824-alat_musik_jawa_tengah_3.jpg", 
+                    image: "https://jabar.parto.id/asset/foto_produk/alat-musik-harmonis-11.jpg", 
                     altNames: [ "Siter" ] 
                 }, 
                 { 
@@ -908,6 +908,7 @@
     </body>
 
 </html>
+
 
 
 
